--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,8 +14,11 @@
       }
     ],
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "theme_color": "#ffffff",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "gcm_sender_id": "580374682172",
+    "orientation": "any"
   }
   
